client/src/App.css
/* ... */
#hamburger-icon.active {
  rotate: 90deg;
}

#hamburger-icon.active:hover {
  color: red;
}

#hamburger-menu {
  position: absolute;
  top: var(--header-height);
  right: 0px;
  width: 100px;
  height: 100%;
  background-color: black;
  z-index: 99;
  transition: all 200ms ease-out;
}

#hamburger-menu.inactive {
  right: -100px;
}

/* INFO PAGES */
.info-page-container {
  height: 100%;
  margin: 20px;
  display: flex;
  flex-direction: column;
}

.info-page {
  flex: 1;
  background-color: var(--dark-blue);
  border-radius: 20px;
  padding-left: 20px;
  padding-right: 20px;
}

.info-section {
  background-color: var(--light-blue);
  margin-top: 20px;
  margin-bottom: 20px;
  margin-left: auto;
  margin-right: auto;
  border-radius: 20px;
  max-width: 570px;
}

.info-section-header {
  display: flex;
  flex-direction: row;
  min-height: var(--info-section-header-height);
  cursor: pointer;
  background-color: cornflowerblue;
}

.info-section-header-spacer {
  flex: 1;
  max-width: var(--info-section-height);
}

.info-section-header-text {
  flex: 3;
  text-align: center;
  font-size: xx-large;
  margin: auto;
}

.info-section-header-button {
  flex: 1;
  max-width: var(--info-section-height);
  text-align: center;
  font-size: x-large;
  margin: auto;
  transition: ease-out 300ms;
}

.info-section-header-button.active {
  rotate: 180deg;
}

.info-section-body {
  height: fit-content;
  width: inherit;
  background-color: var(--light-blue);
  padding: 20px;
}

.info-section-body > h1,
.info-section-body > h2,
.info-section-body > h3,
.info-section-body > form {
  text-align: center;
}

/* CONTAGE PAGE */

#contact-links {
  text-align: center;
}

#contact-links > * {
  margin: 20px;
  font-size: 4em;
}

.linkedin,
.github,
.twitter {
  position: relative;
  z-index: 10;
  transition: all 8s ease-out;
  margin-top: 5px;
}

.linkedin:hover,
.github:hover,
.twitter:hover {
  transition: all 2s ease-out;
  rotate: 900deg;
}

.linkedin {
  color: rgb(21, 105, 191);
}

.github {
  color: rgb(0, 0, 0);
}

.twitter {
  color: rgb(41, 157, 237);
}

.icon-bg {
  position: absolute;
  top: 5px;
  left: 2px;
  height: 50px;
  width: 50px;
  background-color: white;
  z-index: -1;
}

/*INPUT FIELD*/

#inputfield-container {
  text-align: center;
  display: flex;
  flex-direction: row;
  height: var(--inputfield-container-height);
  margin-top: var(--inputfield-container-vertical-margin);
  margin-bottom: var(--inputfield-container-vertical-margin);
  padding: 3px;
}

#inputfield-spacer {
  flex: 1;
}

#inputfield {
  flex: 4;
  max-width: none;
  text-align: center;
  font-size: xx-large;
  padding-left: 3px;
  outline: none;
  border-style: solid;
  border-color: black;
  border-width: var(--inputfield-border-width);
  border-radius: 20px;
  text-transform: lowercase;
}

#inputfield-container:focus-within #inputfield {
  border-color: var(--fpc-green);
  outline-style: solid;
  outline-width: 2px;
  outline-color: var(--fpc-green);
}

#inputfield-container:focus-within .autocomplete-panel {
  visibility: visible;
}

#inputfield:focus::placeholder {
  color: transparent;
}

.random-button {
  flex: 1;
  font-size: xx-large;
  text-align: left;
  padding-left: 10px;
  margin: auto;
  cursor: pointer;
  transition: 350ms;
}

.random-button:hover {
  color: white;
  transition: 0s;
}

.autocomplete-panel {
  position: absolute;
  top: calc(
    1px + var(--header-height) + var(--inputfield-container-height) +
      var(--inputfield-container-vertical-margin) +
      var(--inputfield-border-width) * 2
  );
  left: calc(calc(100% - 260px) / 2);
  width: 260px;
  /* min-width: 234px; */ /* this causes centering issues. TODO: implement this w/o issues */

  max-height: 200px;
  z-index: 999;

  visibility: hidden;
  background-color: rgba(256, 256, 256, 0.9);

  border-style: solid;
  border-width: 1px;
  border-color: black;
  border-radius: 0 0 20px 20px;
}

.autocomplete-suggestion {
  border-bottom: 1px solid;
  border-color: lightgray;
  cursor: pointer;
}

.autocomplete-suggestion:hover,
.autocomplete-suggestion:focus {
  background-color: paleturquoise;
  outline-style: none;
}

.autocomplete-suggestion-searchvalue {
  color: var(--fpc-green);
  font-weight: bold;
}

/*BODY PANEL*/
#bodypanel-container {
  flex: 1;
  display: flex;
  flex-flow: row;
  margin: 0px 20px 20px 20px;
}

#bodypanel {
  display: flex;
  flex: 1;
  position: relative;
  background-color: var(--dark-blue);
  border-radius: 20px;
}

#bodypanel.mobile {
  flex-direction: column;
}

/* SUBPANELS */
.subpanel {
  display: flex;
  flex-flow: column;
  flex: 1;
  margin: 20px;
}

.subpanel-component {
  background: var(--light-blue);
}

.subpanel-header {
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 20px 20px 0px 0px;
  background: cornflowerblue;
  flex: 0 0 40px;
  font-size: 25px;
  color: rgb(9, 39, 97);
}

.subpanel-body {
  border-radius: 0px 0px 20px 20px;
  flex: 9;
}

.subpanel.mobile#resultsPanel {
  flex: 2;
  margin-top: 0px;
}

/* INGREDIENTS */
.ingredient-container {
  display: flex;
}

.ingredient-container:hover {
  background: rgb(99, 133, 195);
}

.ingredient {
  flex: 1;
  color: rgb(3, 47, 128);
  font-size: x-large;
  text-align: center;
  padding: auto;
  cursor: default;
}

.ingredient.bold {
  font-weight: bold;
}

.ingredient.caps {
  text-transform: uppercase;
}

.ingredient-container.warning {
  background: rgb(195, 189, 99);
}
.ingredient-container.warning:hover {
  background: rgb(170, 158, 56);
}

.ingredient-container.strongwarning {
  background: rgb(195, 99, 99);
}

.ingredient-container.strongwarning:hover {
  background: rgb(170, 68, 56);
}

.icon-button {
  flex: 0 0 40px;
  font-size: x-large;
  text-align: center;
  padding: 3px;
}

.icon-button:hover {
  cursor: pointer;
}

.delete-button {
  color: rgb(73, 2, 2);
}

.add-button {
  color: rgb(9, 97, 72);
}

/* EMAIL FORM */
.email-form-container {
  height: 100%;
  width: 100%;
  display: flex;
}
/* ... */

